Fix icon button item spacing

--- a/src/sass/components/_btn.scss
+++ b/src/sass/components/_btn.scss
@@ -29,7 +29,8 @@
   &--icon {
     display: flex;
     align-items: center;
-    gap: 0.8rem;
+    justify-content: space-around;
+    gap: 3.2rem;
   }
 
   // Select
